--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - ./backend:/app
       - /app/node_modules
     environment:
-      - NODE_ENV=development
+      - NODE_ENV=production
       - DB_HOST=mysql
       - DB_USER=condos_user
       - DB_PASSWORD=condos_password
@@ -28,6 +28,14 @@ services:
       - redis
     networks:
       - condos-network
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.backend.rule=Host(`condominiogt.com`) || Host(`www.condominiogt.com`) && PathPrefix(`/api`)"
+      - "traefik.http.routers.backend.entrypoints=websecure"
+      - "traefik.http.routers.backend.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.backend.middlewares=strip-api-prefix"
+      - "traefik.http.middlewares.strip-api-prefix.stripprefix.prefixes=/api"
+      - "traefik.http.services.backend.loadbalancer.server.port=3000"
 
   # Frontend React
   frontend:
@@ -36,17 +44,24 @@ services:
       dockerfile: Dockerfile
     container_name: condos-frontend
     restart: unless-stopped
+    # Port exposed only for direct access if needed
     ports:
       - "8000:80"
     volumes:
       - ./frontend:/app
       - /app/node_modules
     environment:
-      - REACT_APP_API_URL=http://localhost:3000
+      - REACT_APP_API_URL=https://condominiogt.com/api
     depends_on:
       - backend
     networks:
       - condos-network
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.frontend.rule=Host(`condominiogt.com`) || Host(`www.condominiogt.com`)"
+      - "traefik.http.routers.frontend.entrypoints=websecure"
+      - "traefik.http.routers.frontend.tls.certresolver=letsencrypt"
+      - "traefik.http.services.frontend.loadbalancer.server.port=80"
 
   # Banco de dados MySQL
   mysql:
